# lotab

./: .clang-format  .gitignore  .swiftformat  README.md  build.sh  changelog.txt  gui_init_debug.txt  meson.build
.github/scripts/: push-to-loki.sh
.github/workflows/: build.yml  hello_world.yml  test.yml
app/: ContentView.swift  Info.plist  LotabApp.swift  Package.swift  TabManagerApp.swift  bridge.h  build.sh
app/Sources/TabManager/: TabManagerApp.swift
daemon/: build.sh  client.c  client.h  config.h.in  engine.c  engine.h  main.c  meson.build  statusbar.h  statusbar.m  util.c  util.h
data/: com.mob.lotab.plist.in
doc/: build.md
extension/: background.js  manifest.json
scripts/: launchctl.sh
subprojects/: argparse.wrap  cjson.wrap  libwebsockets.wrap  tomlc99.wrap
subprojects/packagefiles/argparse/: meson.build
subprojects/packagefiles/cjson/: meson.build
subprojects/packagefiles/libwebsockets/: meson.build
subprojects/packagefiles/tomlc99/: meson.build
tests/: client_mode_test.cc  client_test.cc  e2e_test.py  engine_test.cc  engine_test.cpp  install_test.py  integration_test.cc  test_util.cc  test_util.h  ui_test_quit.py
tests/extension/: integration_test.js  package-lock.json  package.json  test_integration.py
